# testDouble-espidf-platformio

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
components/calculator/: CMakeLists.txt  Kconfig  calculator.c  calculator.h
components/calculator/mocks/: mock_math.c  mock_math.h
src/: main.c
test/components/test_calculator/: test_calculator.c
